<?xml version="1.0"?>
<package>
  <name>rtt_lwr_control</name>
  <version>0.1.0</version>
  <description>The rtt_lwr_control package</description>

  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>BSD</license>

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>lwr_hw_interface</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>lwr_hw_interface</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <plugin_depend>rtt_rosnode</plugin_depend>
  </export>
</package>
